--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "sass": "^1.77.2",
     "typescript": "~5.4.0",
     "unplugin-auto-import": "^0.17.6",
+    "unplugin-element-plus": "^0.8.0",
     "unplugin-vue-components": "^0.27.0",
     "vite": "^5.2.8",
     "vite-plugin-vue-devtools": "^7.0.25",
